Fixed skills spacing

--- a/src/components/skills/skills.sass
+++ b/src/components/skills/skills.sass
@@ -3,9 +3,9 @@
     color: $primary1
     margin-bottom: 16px
   .skills-holder
-    margin-bottom: 16px
+    margin: 12px -3px
     .skill
-      margin: 6px
+      margin: 7px 5px
       color: black
       line-height: 8px
       padding: 14px 18px
@@ -13,7 +13,7 @@
       display: inline-block
       background-color: white
       border: 1px solid rgba(0,0,0,0.12)
-      box-shadow: 0 0 6px rgba(0,0,0,0.01)
+      box-shadow: 0 0 6px rgba(0,0,0,0.02)
       @include user-select()
       @include transition(all 400ms ease)
       span
@@ -43,18 +43,18 @@
 
 @media (max-width: 767px)
   #skills
-    .heading
     .skills-holder
+      margin: 12px -2px
       .skill
-        margin: 6px 5px
-        padding: 12px 16px
+        margin: 6px 4px
+        padding: 11px 14px
         .mdi
           margin-right: 10px
 
 @media (max-width: 361px)
   #skills
-    .heading
     .skills-holder
+      margin: 12px -1px
       .skill
         margin: 5px 3px
         padding: 9px 12px
@@ -62,4 +62,4 @@
           top: -1px
         .mdi
           top: 0px
-          margin-right: 8px
+          // margin-right: 8px
